--- a/new_clean_spec.ipynb
+++ b/new_clean_spec.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -43,31 +42,68 @@
    "source": [
     "# save cleaned/refactored version of openapi.json as openapi.v2.json\n",
     "\n",
-    "with open('reference/openapi.v2.json', 'w') as jf:\n",
-    "    json.dump(openapiFile, jf)"
+    "with open(\"reference/openapi.v2.json\", \"w\") as jf:\n",
+    "    json.dump(openapiFile, jf)\n",
+    "with open(\"reference/openapi.v2.json\") as jsonF:\n",
+    "    v2Json = json.load(jsonF)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# reformat openapi-bundle-cleaned.v1.yaml to json and create json variable\n",
     "\n",
-    "with open(\"openapi-bundle-cleaned.v1.yaml\") as yf, \\\n",
-    "    open(\"openapi-bundle-cleaned.v1.json\", \"w\") as jf, \\\n",
-    "    open(\"openapi-bundle-cleaned.v1.json\") as cleanedV1Json:\n",
-    "    yamlObject = yaml.safe_load(yf)\n",
-    "    json.dump(yamlObject, jf)\n",
-    "    v1Json = json.load(cleanedV1Json)\n"
-   ],
+    "with open(\"openapi-bundle-cleaned.v1.yaml\") as yamlFile, \\\n",
+    "    open(\"openapi-bundle-cleaned.v1.json\", \"w\") as jsonFIle:\n",
+    "    yamlObject = yaml.safe_load(yamlFile)\n",
+    "    json.dump(yamlObject, jsonFIle)\n",
+    "with open(\"openapi-bundle-cleaned.v1.json\") as v1:\n",
+    "    v1Json = json.load(v1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# override version in field info\n",
+    "\n",
+    "infoSection = defaultdict(dict)\n",
+    "for info, fields in v2Json[\"info\"].items():\n",
+    "    infoSection[info] = fields\n",
+    "v1Json[\"info\"][\"version\"] = infoSection[\"version\"]\n",
+    "\n",
+    "with open(\"openapi-bundle-cleaned.v1.json\", \"w\") as openapiv1:\n",
+    "    json.dump(v1Json, openapiv1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "v2Json[\"paths\"].update(v1Json[\"paths\"])\n",
+    "\n",
+    "with open(\"openapi-bundle-cleaned.v1.json\", \"w\") as openapiv1:\n",
+    "    json.dump(v2Json, openapiv1)\n"
+   ]
   },
   {
    "cell_type": "code",
